# Horizon-AI

./: .gitignore  AUDIT_2024_COMPLET.md  AUDIT_TECHNIQUE_COMPLET.md  CODE_MORT_INVENTAIRE.md  CORRECTIONS_URGENTES_RAPPORT.md  GUIDE_UTILISATEUR.md  PHASE4_GESTION_ERREURS_RAPPORT.md  RAPPORT_CORRECTIONS.md  README.md  SPRINT1_QUICKWINS_RAPPORT.md  eslint.config.js  package-lock.json  package.json  run_tests.py  vite.config.js  vitest.config.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md
src/: App.jsx  README.md  index.css  main.jsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: context_reader.rs  context_reader_commands.rs  lib.rs  main.rs  ollama_installer.rs  permission_commands.rs  permission_manager.rs  python_bridge.rs  window_manager.rs
src-tauri/src/licensing/: commands.rs  device.rs  mod.rs  store.rs  verify.rs
src/Layouts/: AppLayout.jsx
src/components/: AIChatPanel.jsx  AnimatedBackground.jsx  AnimatedInteractiveButton.jsx  Console.jsx  ContextPanel.jsx  ErrorBoundary.jsx  FileManager.jsx  LiquidGauge.jsx  MainPanel.jsx  MemoryManager.jsx  MercuryLoader.jsx  ModelManager.jsx  OllamaSetup.jsx  OnboardingTour.jsx  PermissionBar.jsx  PermissionManager.jsx  PermissionRequestModal.jsx  PromptViewer.jsx  Toast.jsx  (+8 more)
web/: account-modal.js  accounts.html  features.html  index.html  pricing.html  security.html  styles.css
worker/: README.md  main.py  requirements.txt  test_path_validator.py  test_permission_guard.py
(+96 files in other folders)
