[package]
name = "horizon-ai"
version = "2.0.0"
description = "Horizon AI - Assistant IA local avec interface premium"
authors = ["Horizon AI Team"]
license = "MIT"
repository = "https://github.com/GabrielHori/Horizon-AI"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Sérialisation
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging et Utilitaires
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Noyau Tauri v2 (On retire "protocol" qui cause le conflit)
# Noyau Tauri v2 simplifié
tauri = { version = "2.0", features = ["wry", "image-ico", "image-png"] }

# Plugins Tauri v2 officiels
tauri-plugin-log = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# HTTP client pour téléchargement Ollama
reqwest = { version = "0.12", features = ["blocking"] }

# Gestion des dates et heures
chrono = { version = "0.4", features = ["serde"] }

# Synchronisation et lazy initialization
lazy_static = "1.4"

# Gestion des fichiers et chemins
